# rust-playground

./: thought-process.md
.github/workflows/: test.yaml
rust/mdns/: Cargo.toml  build.rs  lib.rs
rust/mdns/examples/: basic_usage.rs  simple.rs
rust/mdns/src/: lib.rs  mdns_networking_socket.c
rust/mdns/tests/: integration.rs
rust/openpgp/: Cargo.toml  README.md
rust/procure2pay/: Cargo.toml  README.md  run_tests.sh
rust/procure2pay/src/: activities.rs  csv_parser.rs  main.rs  parallel.rs  sequential.rs  tests.rs
