[package]
name = "openpgp-parser"
version = "0.1.0"
edition = "2021"

# Metadata for documentation and description
description = "A simple Rust program to parse and display OpenPGP packets"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourname/openpgp-parser"
homepage = "https://github.com/yourname/openpgp-parser"

[dependencies]
sequoia-openpgp = "*"
anyhow = "*"